--- a/html-boilerplate/basic_practice.html
+++ b/html-boilerplate/basic_practice.html
@@ -12,5 +12,15 @@
     <p>paragraph 1</p>
     <p>paragraph 2</p>
     <p><strong>bold paragraph 3</strong></p>
+    <ul>
+        <li>item a</li>
+        <li>item b</li>
+        <li>item c</li>
+    </ul>
+    <ol>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+    </ol>
 </body>
 </html>
