--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Homepage</h1>
+    <a href="https://www.theodinproject.com/about">click me</a>
+    <a href="./pages/about.html">About</a>
+    <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo">
+    <img src="images/dog.jpg">
 </body>
 </html>
